src/test/deca/syntax/invalid/test_synt/class/return_vide.deca
// Description:
//    Test ou verifie que si return n'est pas suivi d'un value c'est une erreur
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: erreur,  return should be followed by something
//
// Historique:
//    cree le 22/01/2022


class helloo{
    int number ;

    void world(int x){
        x = x + 1 ;
        return  ;
    }

}


